@@ -2013,8 +2013,12 @@ If you are unsure, use synchronous version of this function
 	    (process-send-eof (epg-context-process context))))
     ;; Normal (or cleartext) signature.
     (if (epg-data-file signature)
-	(epg--start context (list "--" (epg-data-file signature)))
-      (epg--start context '("-"))
+	(epg--start context (if (eq (epg-context-protocol context) 'CMS)
+				(list "--verify" "--" (epg-data-file signature))
+			      (list "--" (epg-data-file signature))))
+      (epg--start context (if (eq (epg-context-protocol context) 'CMS)
+			      '("--verify" "-")
+			    '("-")))
       (if (eq (process-status (epg-context-process context)) 'run)
 	  (process-send-string (epg-context-process context)
 			       (epg-data-string signature)))
